--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -1,2 +1,5 @@
-<ag-grid-angular [gridOptions]="gridOptions"
+<button type="button" (click)="create()">Create New Todo</button>
+<h3>{{(todos | async)?.length}} Tasks</h3>
+<ag-grid-angular class="ag-theme-balham"
+                 [gridOptions]="gridOptions"
                  [rowData]="todos | async"></ag-grid-angular>
